bindings/go/robots_c.h

// Request-rate directive value: requests per time period.
// Format in robots.txt: "Request-rate: requests/seconds" (e.g., "1/5" = 1 request per 5 seconds)
struct RequestRate {
  int requests = 1;    // Number of requests allowed
  int seconds = 1;     // Time period in seconds

  // Returns requests per second as a double.
  double RequestsPerSecond() const {
    return seconds > 0 ? static_cast<double>(requests) / seconds : 0.0;
  }

  // Returns minimum delay between requests in seconds.
  double DelaySeconds() const {
    return requests > 0 ? static_cast<double>(seconds) / requests : 0.0;
  }
};
// Content-Signal directive value: AI content preferences.
// Format in robots.txt: "Content-Signal: ai-train=no, search=yes, ai-input=yes"
// See: https://github.com/nicksellen/cc-signals
struct ContentSignal {
  std::optional<bool> ai_train;   // ai-train: Training or fine-tuning AI models
  std::optional<bool> ai_input;   // ai-input: Using content in AI models for real-time generation
  std::optional<bool> search;     // search: Building search indexes and providing results

  // Returns true if any signal is set.
  bool HasAnySignal() const {
    return ai_train.has_value() || ai_input.has_value() || search.has_value();
  }

  // Returns true if AI training is allowed (defaults to true if not specified).
  bool AllowsAiTrain() const {
    return ai_train.value_or(true);
  }

  // Returns true if AI input is allowed (defaults to true if not specified).
  bool AllowsAiInput() const {
    return ai_input.value_or(true);
  }

  // Returns true if search indexing is allowed (defaults to true if not specified).
  bool AllowsSearch() const {
    return search.value_or(true);
  }
};
// =============================================================================
// Types
// =============================================================================

// Opaque pointer to RobotsMatcher instance.
typedef struct robots_matcher_s robots_matcher_t;
// Request-rate value (requests per time period).
typedef struct {
  int requests;  // Number of requests allowed
  int seconds;   // Time period in seconds
} robots_request_rate_t;
// Content-Signal values for AI content preferences.
// Each field uses a tri-state: -1 = not set, 0 = no, 1 = yes.
typedef struct {
  int8_t ai_train;  // ai-train: Training or fine-tuning AI models
  int8_t ai_input;  // ai-input: Using content in AI models for real-time generation
  int8_t search;    // search: Building search indexes and providing results
} robots_content_signal_t;
// =============================================================================
// Matcher lifecycle
// =============================================================================

// Creates a new RobotsMatcher instance.
// Returns NULL on allocation failure.
// Caller must free with robots_matcher_free().
robots_matcher_t* robots_matcher_create(void);
// Frees a RobotsMatcher instance.
// Safe to call with NULL.
void robots_matcher_free(robots_matcher_t* matcher);
// =============================================================================
// URL checking
// =============================================================================

// Checks if a URL is allowed for a single user-agent.
//
// Parameters:
//   matcher:          RobotsMatcher instance (will be modified)
//   robots_txt:       robots.txt content
//   robots_txt_len:   length of robots_txt
//   user_agent:       user-agent string to check
//   user_agent_len:   length of user_agent
//   url:              URL to check (must be %-encoded per RFC3986)
//   url_len:          length of url
//
// Returns true if the URL is allowed, false if disallowed.
bool robots_allowed_by_robots(
    robots_matcher_t* matcher,
    const char* robots_txt, size_t robots_txt_len,
    const char* user_agent, size_t user_agent_len,
    const char* url, size_t url_len);
// =============================================================================
// Matcher state accessors (call after robots_allowed_by_robots)
// =============================================================================

// Returns the line number that matched, or 0 if no match.
int robots_matching_line(const robots_matcher_t* matcher);
// Returns true if a specific user-agent block was found (not just '*').
bool robots_ever_seen_specific_agent(const robots_matcher_t* matcher);
// =============================================================================
// Crawl-delay support (non-standard directive)
// =============================================================================

// Returns true if a crawl-delay was specified for the matched user-agent.
bool robots_has_crawl_delay(const robots_matcher_t* matcher);
// Returns the crawl-delay in seconds, or 0.0 if not specified.
// Call robots_has_crawl_delay() first to distinguish "not set" from "0".
double robots_get_crawl_delay(const robots_matcher_t* matcher);
// =============================================================================
// Request-rate support (non-standard directive)
// =============================================================================

// Returns true if a request-rate was specified for the matched user-agent.
bool robots_has_request_rate(const robots_matcher_t* matcher);
// Gets the request-rate value. Returns false if not specified.
// On success, fills in the rate struct and returns true.
bool robots_get_request_rate(const robots_matcher_t* matcher,
                              robots_request_rate_t* rate);
// =============================================================================
// Content-Signal support (proposed AI directive)
// =============================================================================

// Returns true if Content-Signal directive support is compiled in.
bool robots_content_signal_supported(void);
// Returns true if a content-signal was specified for the matched user-agent.
bool robots_has_content_signal(const robots_matcher_t* matcher);
// Gets the content-signal values. Returns false if not specified.
// On success, fills in the signal struct and returns true.
// Each field is: -1 = not set, 0 = no, 1 = yes.
bool robots_get_content_signal(const robots_matcher_t* matcher,
                                robots_content_signal_t* signal);
// Convenience functions for content-signal (return default true if not set).
bool robots_allows_ai_train(const robots_matcher_t* matcher);
bool robots_allows_ai_input(const robots_matcher_t* matcher);
bool robots_allows_search(const robots_matcher_t* matcher);
// =============================================================================
// Utility functions
// =============================================================================

// Validates that a user-agent string contains only valid characters [a-zA-Z_-].
bool robots_is_valid_user_agent(const char* user_agent, size_t len);
// Returns the library version string.
const char* robots_version(void);
  // namespace

// Allow for typos such as DISALOW in robots.txt.
constexpr bool kAllowFrequentTypos = true;
RobotsMatcher::RobotsMatcher()
    : seen_global_agent_(false),
      seen_specific_agent_(false),
      ever_seen_specific_agent_(false),
      seen_separator_(false),
      best_specific_agent_length_(0),
      path_(nullptr),
      user_agents_(nullptr) {
  match_strategy_ = new LongestMatchRobotsMatchStrategy();
}
RobotsMatcher::~RobotsMatcher() {
  delete match_strategy_;
}
bool RobotsMatcher::ever_seen_specific_agent() const {
  return ever_seen_specific_agent_;
}
int RobotsMatcher::matching_line() const {
  if (ever_seen_specific_agent_) {
    return Match::HigherPriorityMatch(disallow_.specific, allow_.specific)
        .line();
  }
  return Match::HigherPriorityMatch(disallow_.global, allow_.global).line();
}
// =============================================================================
// Matcher lifecycle
// =============================================================================

extern "C" robots_matcher_t* robots_matcher_create(void) {
  try {
    return new robots_matcher_t();
  } catch (...) {
    return nullptr;
  }
}
extern "C" void robots_matcher_free(robots_matcher_t* matcher) {
  delete matcher;
}
// =============================================================================
// URL checking
// =============================================================================

extern "C" bool robots_allowed_by_robots(
    robots_matcher_t* matcher,
    const char* robots_txt, size_t robots_txt_len,
    const char* user_agent, size_t user_agent_len,
    const char* url, size_t url_len) {
  if (!matcher || !robots_txt || !user_agent || !url) {
    return true;  // Allow on invalid input
  }

  std::string_view robots_body(robots_txt, robots_txt_len);
  std::string agent(user_agent, user_agent_len);
  std::string target_url(url, url_len);

  return matcher->matcher.OneAgentAllowedByRobots(robots_body, agent, target_url);
}
// =============================================================================
// Matcher state accessors
// =============================================================================

extern "C" int robots_matching_line(const robots_matcher_t* matcher) {
  if (!matcher) return 0;
  return matcher->matcher.matching_line();
}
extern "C" bool robots_ever_seen_specific_agent(const robots_matcher_t* matcher) {
  if (!matcher) return false;
  return matcher->matcher.ever_seen_specific_agent();
}
// =============================================================================
// Crawl-delay support
// =============================================================================

extern "C" bool robots_has_crawl_delay(const robots_matcher_t* matcher) {
  if (!matcher) return false;
  return matcher->matcher.GetCrawlDelay().has_value();
}
extern "C" double robots_get_crawl_delay(const robots_matcher_t* matcher) {
  if (!matcher) return 0.0;
  auto delay = matcher->matcher.GetCrawlDelay();
  return delay.value_or(0.0);
}
// =============================================================================
// Request-rate support
// =============================================================================

extern "C" bool robots_has_request_rate(const robots_matcher_t* matcher) {
  if (!matcher) return false;
  return matcher->matcher.GetRequestRate().has_value();
}
extern "C" bool robots_get_request_rate(const robots_matcher_t* matcher,
                                         robots_request_rate_t* rate) {
  if (!matcher || !rate) return false;
  auto opt_rate = matcher->matcher.GetRequestRate();
  if (!opt_rate.has_value()) return false;
  rate->requests = opt_rate->requests;
  rate->seconds = opt_rate->seconds;
  return true;
}
// =============================================================================
// Content-Signal support
// =============================================================================

extern "C" bool robots_content_signal_supported(void) {
#if ROBOTS_SUPPORT_CONTENT_SIGNAL
  return true;
#else
  return false;
#endif
}
extern "C" bool robots_has_content_signal(const robots_matcher_t* matcher) {
#if ROBOTS_SUPPORT_CONTENT_SIGNAL
  if (!matcher) return false;
  return matcher->matcher.GetContentSignal().has_value();
#else
  (void)matcher;
  return false;
#endif
}
extern "C" bool robots_get_content_signal(const robots_matcher_t* matcher,
                                           robots_content_signal_t* signal) {
#if ROBOTS_SUPPORT_CONTENT_SIGNAL
  if (!matcher || !signal) return false;
  auto opt_signal = matcher->matcher.GetContentSignal();
  if (!opt_signal.has_value()) return false;

  signal->ai_train = opt_signal->ai_train.has_value()
                         ? (opt_signal->ai_train.value() ? 1 : 0)
                         : -1;
  signal->ai_input = opt_signal->ai_input.has_value()
                         ? (opt_signal->ai_input.value() ? 1 : 0)
                         : -1;
  signal->search = opt_signal->search.has_value()
                       ? (opt_signal->search.value() ? 1 : 0)
                       : -1;
  return true;
#else
  (void)matcher;
  (void)signal;
  return false;
#endif
}
extern "C" bool robots_allows_ai_train(const robots_matcher_t* matcher) {
#if ROBOTS_SUPPORT_CONTENT_SIGNAL
  if (!matcher) return true;
  auto opt_signal = matcher->matcher.GetContentSignal();
  if (!opt_signal.has_value()) return true;
  return opt_signal->AllowsAiTrain();
#else
  (void)matcher;
  return true;
#endif
}
extern "C" bool robots_allows_ai_input(const robots_matcher_t* matcher) {
#if ROBOTS_SUPPORT_CONTENT_SIGNAL
  if (!matcher) return true;
  auto opt_signal = matcher->matcher.GetContentSignal();
  if (!opt_signal.has_value()) return true;
  return opt_signal->AllowsAiInput();
#else
  (void)matcher;
  return true;
#endif
}
extern "C" bool robots_allows_search(const robots_matcher_t* matcher) {
#if ROBOTS_SUPPORT_CONTENT_SIGNAL
  if (!matcher) return true;
  auto opt_signal = matcher->matcher.GetContentSignal();
  if (!opt_signal.has_value()) return true;
  return opt_signal->AllowsSearch();
#else
  (void)matcher;
  return true;
#endif
}
// =============================================================================
// Utility functions
// =============================================================================

extern "C" bool robots_is_valid_user_agent(const char* user_agent, size_t len) {
  if (!user_agent || len == 0) return false;
  return googlebot::RobotsMatcher::IsValidUserAgentToObey(
      std::string_view(user_agent, len));
}
extern "C" const char* robots_version(void) {
  return ROBOTS_VERSION;
}